fix favorites menu issue and remove letter spacing transition in main app title heading

--- a/src/main/webapp/sass/Portal.scss
+++ b/src/main/webapp/sass/Portal.scss
@@ -2563,3 +2563,9 @@ div.colborder {
 .letter-spacing-6 {
 	letter-spacing: 6px;
 }
+.notransition {
+	-webkit-transition: none !important;
+	-moz-transition: none !important;
+	-o-transition: none !important;
+	transition: none !important;
+}
